--- a/corporate.html
+++ b/corporate.html
@@ -82,7 +82,7 @@
           <h2 id="general">General Information</h2>
           <p>
             This branded website is publicly available at
-            <a href="https://buas-media-interactive.github.io/">buas-media-interactive.github.io/my-website</a>
+            <a href="https://lottahosho.github.io/seniorroadguideclass4/">https://lottahosho.github.io/seniorroadguideclass4/</a>
             <em>(please change text <strong>and</strong> hyperlink destination)</em>
           </p>
           <p>
@@ -220,23 +220,7 @@ The website has a simple design, the different sections are based on a vertical 
 The different functionalities seek to be intuitive, for this we highlight the interactive functionalities by means of animations and visual elements, at the same time it has informative texts and functional multimedia elements to represent the functionalities of our produc
 
           </p>
-          <ul>
-            <li>
-              A colour scheme (with HTML colour codes, which must be consistent with your final website)
-              <em>&mdash; see the example below from the BUas brand book:</em>
-              <ul class="list-unstyled">
-                <li>
-                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #EE7622;"></span>
-                  #EE7622
-                  <em>The orange colour refers to the Dutch identity and the city of Breda (Oranjestad). Orange stands for&hellip;</em>
-                </li>
-                <li>
-                  <span class="border border-secondary rounded px-2 me-1" style="background-color: #00406B;"></span>
-                  #00406B
-                  <em>Dark blue signifies&hellip;</em>
-                </li>
-              </ul>
-            </li>
+
             <li>Font Choices:  
               Following the advice given by our interviewees we decided to go for a clear and easy to read approach, keeping it simple and  
               
